Fix #72 - Center align .qp-node vertically
This is done so that arrows between two nodes on the same level don't have a "kink". Implemented by add a wrapper / outer node which is fixed at the correct maximum height for a node, and then vertically aligning the .qp-node within it.

--- a/css/qp.css
+++ b/css/qp.css
@@ -234,6 +234,13 @@ div.qp-node:hover .qp-tt {
 .qp-node {
     position: relative;
     white-space: nowrap;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.qp-node-outer {
+    height: 76.4px;
+    display: table-cell;
 }
 
 .qp-tr {
